# TextUI

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
cmake/: TextUIConfig.cmake.in
core/: App.h  BoxStyle.h  Color.h  Input.cpp  Input.h  RenderBuffer.cpp  RenderBuffer.h  Renderer.cpp  Renderer.h  Screen.cpp  Screen.h  SimpleAPI.cpp  SimpleAPI.h  Terminal.cpp  Terminal.h  WidgetManager.cpp  WidgetManager.h
examples/: main.cpp  simple.cpp
graphics/: Chars.h  Theme.h
include/textui/: Colors.h  Export.h  Label.h  Menu.h  Widget.h
input/: Mouse.cpp  Mouse.h
platform/: Platform.h  UnixPlatform.cpp  WindowsPlatform.cpp
widgets/: Button.h  CheckBox.h  Container.h  DropDown.h  Label.h  ListBox.h  Menu.h  MenuBar.h  MessageBox.h  ProgressBar.h  TabControl.h  TextBox.h  Widget.h  Window.h
window/: Dialog.cpp  Dialog.h  ModalDialog.cpp  ModalWindowManager.h  Window.cpp  Window.h
